# frog

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  Dockerfile  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  _config.yml  bootstrap  bootstrap.sh  build-deps.sh  codemeta.json  configure.ac  dox.cfg  frog.pc.in  frog.spec  index.html  test.txt
.github/workflows/: cleanup.yml  frog.yml
DPconfig/: Frog.mbdp.1.0.dir.ibase.wgt  Frog.mbdp.1.0.pairs.sampled.ibase.wgt  README  frog.cfg
_layouts/: lamalayout.html
config/: Frog.mbdp.1.0.rels.ibase.wgt  Frog.mbt.1.0.1paxes  Frog.mbt.1.0.known.dddwfWawa.wgt  Frog.mbt.1.0.settings  Frog.mbt.1.0.top500  Frog.mwu.1.0  Makefile.am  cgntags.main  cgntags.sub  chunker.train.10paxes  chunker.train.5paxes  chunker.train.known.dddfWaa  chunker.train.known.dddfWaa.wgt  chunker.train.known.dddwfWawa  chunker.train.known.dddwfWawa.wgt  chunker.train.lex  chunker.train.lex.ambi.05  chunker.train.settings  chunker.train.top1000  frog-de.cfg  frog-en.cfg  frog-fr.cfg  frog-it.cfg  frog.cfg  mblem.transtable  mblem.tree  mblem.tree.wgt  mbma.igtree  mbma.igtree.wgt  ner.data.10paxes  ner.data.5paxes  ner.data.known.dddwfWawa  ner.data.known.dddwfWawa.wgt  ner.data.known.ddwdwfWawawaa  ner.data.known.ddwdwfWawawaa.wgt  ner.data.lex  ner.data.lex.ambi.05  ner.data.settings  ner.data.top1000  ner.data.top500  (+6 more)
docs/: Doxygen.cfg  Makefile.am  Makefile.sphinx  frog-dp-update.1  frog.1  mblem.1  mbma.1  ner.1
docs/api/html/: AlpinoParser_8cxx.html  AlpinoParser_8cxx__incl.map  AlpinoParser_8cxx__incl.md5  AlpinoParser_8h.html  AlpinoParser_8h__dep__incl.map  AlpinoParser_8h__dep__incl.md5  AlpinoParser_8h__incl.map  AlpinoParser_8h__incl.md5  AlpinoParser_8h_source.html  Frog-util_8cxx.html  Frog-util_8cxx__incl.map  Frog-util_8cxx__incl.md5  Frog-util_8h.html  Frog-util_8h__dep__incl.map  Frog-util_8h__dep__incl.md5  Frog-util_8h__incl.map  Frog-util_8h__incl.md5  Frog-util_8h_source.html  FrogAPI_8cxx.html  FrogAPI_8cxx__incl.map  FrogAPI_8cxx__incl.md5  FrogAPI_8h.html  FrogAPI_8h__dep__incl.map  FrogAPI_8h__dep__incl.md5  FrogAPI_8h__incl.map  FrogAPI_8h__incl.md5  FrogAPI_8h_source.html  FrogData_8cxx.html  FrogData_8cxx__incl.map  FrogData_8cxx__incl.md5  FrogData_8h.html  FrogData_8h__dep__incl.map  FrogData_8h__dep__incl.md5  FrogData_8h__incl.map  FrogData_8h__incl.md5  FrogData_8h_source.html  Frog_8cxx.html  Frog_8cxx__incl.map  Frog_8cxx__incl.md5  Parser_8cxx.html  (+408 more)
docs/api/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+89 more)
docs/api/latex/: AlpinoParser_8cxx.tex  AlpinoParser_8cxx__incl.md5  AlpinoParser_8h.tex  AlpinoParser_8h__dep__incl.md5  AlpinoParser_8h__incl.md5  Frog-util_8cxx.tex  Frog-util_8cxx__incl.md5  Frog-util_8h.tex  Frog-util_8h__dep__incl.md5  Frog-util_8h__incl.md5  FrogAPI_8cxx.tex  FrogAPI_8cxx__incl.md5  FrogAPI_8h.tex  FrogAPI_8h__dep__incl.md5  FrogAPI_8h__incl.md5  FrogData_8cxx.tex  FrogData_8cxx__incl.md5  FrogData_8h.tex  FrogData_8h__dep__incl.md5  FrogData_8h__incl.md5  Frog_8cxx.tex  Frog_8cxx__incl.md5  Parser_8cxx.tex  Parser_8cxx__incl.md5  Parser_8h.tex  Parser_8h__dep__incl.md5  Parser_8h__incl.md5  annotated.tex  cgn__tagger__mod_8cxx.tex  cgn__tagger__mod_8cxx__incl.md5  cgn__tagger__mod_8h.tex  cgn__tagger__mod_8h__dep__incl.md5  cgn__tagger__mod_8h__incl.md5  ckyparser_8cxx.tex  ckyparser_8cxx__incl.md5  ckyparser_8h.tex  ckyparser_8h__dep__incl.md5  ckyparser_8h__incl.md5  classAlpinoParser.tex  classAlpinoParser__coll__graph.md5  (+143 more)
docs/source/: advanced.rst  conf.py  credits.rst  frogData.rst  index.rst  installation.rst  moduleDetails.rst  pythonfrog.rst
docs/texfiles/: bieb.bib  frogmanual.tex  fullname.bst  fullname.sty
fink/: frog.info
include/: Makefile.am
include/frog/: AlpinoParser.h  Configuration.h  Frog-util.h  Frog.h  FrogAPI.h  FrogData.h  Makefile.am  Parser.h  cgn_tagger_mod.h  ckyparser.h  clex.h  csidp.h  enr_iob_tagger_mod.h  enr_ner_tagger_mod.h  iob_tagger_mod.h  mblem_mod.h  mbma_brackets.h  mbma_mod.h  mbma_rule.h  mwu_chunker_mod.h  ner_tagger_mod.h  pos_tagger_mod.h  tagger_base.h  tagger_mod.h  ucto_tokenizer_mod.h
m4/: Makefile.am  ac_check_old_textcat.m4  ac_osx_pkg.m4  ac_search_lm.m4  ax_icu_check.m4  openmp.m4
scripts/: Makefile.am  cky.py  cmdline.py  common.py  csidp.py  csiparse2.py  deptree.py  dir.py  pairs.py  rels.py  sentences.py
src/: .cvsignore  AlpinoParser.cxx  Configuration.cxx  Frog-util.cxx  Frog.cxx  FrogAPI.cxx  FrogData.cxx  Makefile.am  Parser.cxx  cgn_tagger_mod.cxx  ckyparser.cxx  clex.cxx  csidp.cxx  enr_iob_tagger_mod.cxx  enr_ner_tagger_mod.cxx  frog-dp-update  frog-update.sh  iob_tagger_mod.cxx  mblem_mod.cxx  mblem_prog.cxx  mbma_brackets.cxx  mbma_mod.cxx  mbma_prog.cxx  mbma_rule.cxx  mwu_chunker_mod.cxx  ner_prog.cxx  ner_tagger_mod.cxx  pos_tagger_mod.cxx  tagger_base.cxx  tagger_mod.cxx  tst.sh  ucto_tokenizer_mod.cxx
style/: lamalayout.css
test/: problems.txt  problems.wanted
tests/: Makefile.am  tst.ok  tst.txt
