# $Id$
# $URL$

config_DATA = mblem.transtable  mblem.tree mblem.tree.wgt \
	mbma.igtree mbma.igtree.wgt \
        Frog.mwu.1.0 \
	Frog.mbt.1.0.1paxes \
	Frog.mbt.1.0.lex \
	Frog.mbt.1.0.known.dddwfWawa \
	Frog.mbt.1.0.known.dddwfWawa.wgt \
	Frog.mbt.1.0.lex.ambi.05 \
	Frog.mbt.1.0.settings \
	Frog.mbt.1.0.top500 \
	Frog.mbt.1.0.unknown.chnppdddwFawasss \
	chunker.train.lex.ambi.05 \
	chunker.train.lex \
	chunker.train.settings \
	chunker.train.10paxes \
	chunker.train.top1000 \
	chunker.train.known.dwdwdwfWawaw \
	chunker.train.unknown.dwdwdwppsssFawaw \
	Frog.mbdp.1.0.dir.ibase \
	Frog.mbdp.1.0.dir.ibase.wgt \
	Frog.mbdp.1.0.pairs.sampled.ibase \
	Frog.mbdp.1.0.pairs.sampled.ibase.wgt \
	Frog.mbdp.1.0.rels.ibase \
	Frog.mbdp.1.0.rels.ibase.wgt \
	cgntags.main cgntags.sub frog.cfg 

configdir = $(sysconfdir)/$(PACKAGE)

EXTRA_DIST = $(config_DATA)

