# $Id$
# $URL$

config_DATA = mblem.transtable  mblem.tree mblem.tree.wgt \
	mbma.igtree mbma.igtree.wgt \
        Frog.mwu.1.0 \
	Frog.mbt.1.0.1paxes \
	Frog.mbt.1.0.lex \
	Frog.mbt.1.0.known.dddwfWawa \
	Frog.mbt.1.0.known.dddwfWawa.wgt \
	Frog.mbt.1.0.lex.ambi.05 \
	Frog.mbt.1.0.settings \
	Frog.mbt.1.0.top500 \
	Frog.mbt.1.0.unknown.chnppdddwFawasss \
	chunker.train.lex.ambi.05 \
	chunker.train.lex \
	chunker.train.settings \
	chunker.train.10paxes \
	chunker.train.top1000 \
	chunker.train.known.dddwfWawa \
	chunker.train.known.dddwfWawa.wgt \
	chunker.train.unknown.chnppddwFawsss \
	ner.data.lex.ambi.05 \
	ner.data.lex \
	ner.data.settings \
	ner.data.10paxes \
	ner.data.top1000 \
	ner.data.known.ddwdwfWawawaa \
	ner.data.known.ddwdwfWawawaa.wgt \
	ner.data.unknown.chnppddwdwFawawaasss \
	cgntags.main cgntags.sub small-frog.cfg 

configdir = $(sysconfdir)/$(PACKAGE)

EXTRA_DIST = $(config_DATA)

